--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 body {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	background-color: #1f2937;
+	font-family: "Inter", sans-serif;
+	background-color: #cbd5e1;
 	margin: 0;
 	padding: 0;
+	transition: background-color 0.5s ease, color 0.5s ease;
 }
+body.light-body {
+	background-color: #cbd5e1;
+	color: #111;
+}
+
+body.dark-body {
+	background-color: #1f2937;
+	color: #f9fafb;
+}
+
 .app-container {
 	max-width: 500px;
 	margin: 60px auto;
@@ -14,23 +25,37 @@ body {
 	text-align: center;
 	transition: all 0.8s;
 }
-
 h1 {
 	margin-bottom: 20px;
 	color: #222;
 }
-.toggle-theme {
-	margin-bottom: 20px;
+.toggle-theme,
+.toggle-language {
+	margin: 10px;
 	padding: 8px 12px;
 	border: none;
 	border-radius: 6px;
-	font-size: 14px;
+	font-size: 20px;
 	cursor: pointer;
-	background-color: #d1d5db;
+	background-color: #95afd6;
 	color: #111;
 	transition: all 0.8s;
 }
-
+.toggle-theme {
+	position: absolute;
+	top: 50px;
+	left: 50px;
+}
+.toggle-language {
+	padding: 11px;
+	position: absolute;
+	top: 50px;
+	right: 50px;
+}
+.toggle-language:hover,
+.toggle-theme:hover {
+	font-size: 25px;
+}
 .filters {
 	margin-bottom: 20px;
 	display: flex;
@@ -188,10 +213,42 @@ h1 {
 	background-color: #3b82f6;
 	color: white;
 }
+footer {
+	padding: 1rem;
+	text-align: center;
+	color: #1f2937;
+	margin-top: 3rem;
+	border-top: 1px solid #444;
+	transition: background-color 0.5s ease;
+}
+.dark footer {
+	color: #95afd6;
+	border-top: 1px solid wheat;
+}
+.footer p {
+	margin: 5px;
+	font-size: 1rem;
+}
 
+.social-icons {
+	margin-top: 5px;
+	display: flex;
+	justify-content: center;
+	gap: 1.2rem;
+}
+
+.social-icons a {
+	color: #059669;
+	transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.social-icons a:hover {
+	color: #f39c12;
+	transform: scale(1.2);
+}
 @media (max-width: 600px) {
 	.app-container {
-		margin: 20px;
+		margin: 70px 20px;
 		padding: 15px;
 	}
 
@@ -223,5 +280,15 @@ h1 {
 
 	.task-buttons {
 		align-self: flex-end;
+	}
+	.toggle-theme {
+		position: absolute;
+		top: 5px;
+		left: 15px;
+	}
+	.toggle-language {
+		position: absolute;
+		top: 5px;
+		right: 15px;
 	}
 }
