--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 body {
-	font-family: "Inter", sans-serif;
 	background-color: #cbd5e1;
 	margin: 0;
 	padding: 0;
 	transition: background-color 0.5s ease, color 0.5s ease;
 }
+body,
+.app-container,
+.app-container * {
+	font-family: "Tajawal", sans-serif !important;
+	font-weight: bold;
+}
+
 body.light-body {
 	background-color: #cbd5e1;
 	color: #111;
